--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>AluraBooks</title>
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/baner.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -30,5 +31,10 @@
             <a href="#"><img src="imagens/Usuário.png" alt="logo usuario" class="container_imagem"></a>
         </div>
     </header>
+    <section class="baner">
+        <h2 class="baner_titulo">Já sabe por onde começar?</h2>
+        <p class="baner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+        <input type="search" class="baner_pesquisa" placeholder="Qual será sua próxima leitura?">
+    </section>
 </body>
 </html>
