--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/baner.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="carrossel.js" defer></script>
+    <link rel="stylesheet" href="style/carrosel.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -36,5 +40,25 @@
         <p class="baner_texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
         <input type="search" class="baner_pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
+    <section class="carrossel">
+        <h2 class="carrossel-titulo">Últimos Lançamentos</h2>
+        <div class="swiper">
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="imagens/arrumesuacama.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/codigodoheroi.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/comofazeramigos.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/nadapodemeferri.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/nuncaehoradeparar.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/leidaatracao.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/pacientesilenciosa.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/poderhabito.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/fbi.webp" alt=""></div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+    </section>
+    
 </body>
 </html>
