--- a/index.html
+++ b/index.html
@@ -31,9 +31,27 @@
                 <li class="lista_menu_item"><a href="#" class="lista_menu_link">Design & UX</a></li>
             </ul>
             <a href="#"><img src="imagens/Logo.png" alt="logo alura" class="container_imagem"></a>
+            <h1 class="container_titulo"><b class="container_titulo_negrito">Alura</b>Books</h1>
         </div>
+        
+        <ul class="opcoes">
+            <input type="checkbox" name="opcoes-menu" id="opcoes-menu" class="opcoes-botao">
+            <label for="opcoes-menu">
+                <li class="opcoes_item opcoes_link">categoria</li>
+            </label>
+
+            <ul class="lista_menu">
+                <li class="lista_menu_item"><a href="#" class="lista_menu_link">Programação</a></li>
+                <li class="lista_menu_item"><a href="#" class="lista_menu_link">Front-end</a></li>
+                <li class="lista_menu_item"><a href="#" class="lista_menu_link">Infraestrutura</a></li>
+                <li class="lista_menu_item"><a href="#" class="lista_menu_link">Business</a></li>
+                <li class="lista_menu_item"><a href="#" class="lista_menu_link">Design & UX</a></li>
+            </ul>
+            <li class="opcoes_item"><a class="opcoes_link" href="#">favorito</a></li>
+            <li class="opcoes_item"><a class="opcoes_link" href="#">minha estante</a></li>
+        </ul>
         <div class="container">
-            <a href="#"><img src="imagens/Favoritos.png" alt="logo favorito" class="container_imagem"></a>
+            <a href="#"><img src="imagens/Favoritos.png" alt="logo favorito" class="container_imagem favorito_transparente"></a>
             <a href="#"><img src="imagens/Compras.png" alt="logo carrinho de compras" class="container_imagem"></a>
             <a href="#"><img src="imagens/Usuário.png" alt="logo usuario" class="container_imagem"></a>
         </div>
