--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <div class="swiper">
             <div class="swiper-pagination"></div>
             <div class="swiper-wrapper">
-             c
               <div class="swiper-slide"><img src="imagens/codigodoheroi.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/comofazeramigos.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/nadapodemeferri.jpg" alt=""></div>
@@ -132,7 +131,7 @@
         </div>
     </div>
     <section class="topicos">
-        <h2 class="topicos_titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <h2 class="topicos_titulo">Tópicos visitados recentemente</h2>
         <ul class="topicos_lista">
             <li class="topicos_item">
                 <a href="" class="topicos_link">Android</a>
@@ -161,8 +160,10 @@
         </ul>
     </section>
     <section class="contato">
-        <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
-        <p class="contato_descricao">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <div>
+            <h2 class="contato_titulo">Fique por dentro das novidades!</h2>
+            <p class="contato_descricao">Atualizações de e-books, novos livros, promoções e outros.</p>
+        </div>
         <input type="email" class="contato_input" placeholder="Cadastre seu e-mail">
     </section>
     <footer>
