--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container_botao">
-            <label for="menu">
+            <label for="menu" class="container_rotulo">
                 <span class="container_menu_hamburger container_imagem"></span>
             </label>
             <ul class="lista_menu">
@@ -35,7 +35,7 @@
         
         <ul class="opcoes">
             <input type="checkbox" name="opcoes-menu" id="opcoes-menu" class="opcoes-botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcao_menu">
                 <li class="opcoes_item opcoes_link">categoria</li>
             </label>
 
