--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBooks</title>
+    <title>Coffee and Books</title>
     <link rel="stylesheet" href="style/header.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/baner.css">
@@ -29,8 +29,8 @@
                 <li class="lista_menu_item"><a href="#" class="lista_menu_link">Business</a></li>
                 <li class="lista_menu_item"><a href="#" class="lista_menu_link">Design & UX</a></li>
             </ul>
-            <a href="#"><img src="imagens/Logo.png" alt="logo alura" class="container_imagem"></a>
-            <h1 class="container_titulo"><b class="container_titulo_negrito">Alura</b>Books</h1>
+            <a href="#"><img src="imagens/livro.png" alt="logo alura" class="container_imagem"></a>
+            <h1 class="container_titulo"><b class="container_titulo_negrito">Coffee</b> and Books</h1>
         </div>
         
         <ul class="opcoes">
@@ -65,15 +65,20 @@
         <div class="carrossel_container">
         <div class="swiper">
             <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="imagens/codigodoheroi.jpg" alt=""></div>
+            <div class="swiper-wrapper" id="carrossel">
+              <!-- <div class="swiper-slide"><img src="imagens/codigodoheroi.jpg" alt="">
+                    <div id="preco_descricao">
+                        <h1 class="preco_titulo">titulo</h1>
+                        <p class="preco">preco</p>
+                    </div> 
+                </div>
               <div class="swiper-slide"><img src="imagens/comofazeramigos.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/nadapodemeferri.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/nuncaehoradeparar.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/leidaatracao.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/pacientesilenciosa.jpg" alt=""></div>
               <div class="swiper-slide"><img src="imagens/poderhabito.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/fbi.webp" alt=""></div>
+              <div class="swiper-slide"><img src="imagens/fbi.webp" alt=""></div> -->
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
@@ -116,11 +121,11 @@
             <div class="card_descricao">
                 <div class="descricao">
                     <img src="imagens/Estrelinhas.png" alt="">
-                    <h3 class="descricao_titulo">Autora do Mês</h3>
-                    <h2 class="descricao_titulo_produto">Juliana Agarikov</h2>
-                    <p>Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
+                    <h3 class="descricao_titulo">Autor do Mês</h3>
+                    <h2 class="descricao_titulo_produto">Dale Carnegie</h2>
+                    <p>escritor e orador norte-americano. Fundou o que é hoje uma rede mundial de mais de 3.000 instrutores e escritórios em aproximadamente 97 países que já formou mais de 9 milhões de pessoas no mundo.</p>
                 </div>
-                <img src="imagens/Perfil-escritora 1.png" alt="">
+                <img src="imagens/Dale Carnegie.jpg" alt="">
             </div>
             <div class="card_botoes">
                 <ul class="botoes">
@@ -170,7 +175,7 @@
     </section>
     <footer>
             <div class="rodape">
-                <p class="rodape-titulo">Grupo Alura</p>
+                <p class="rodape-titulo">Grupo Coffee and Books</p>
                 <ul class="lista_rodape">
                     <li class="lista_rodape-titulo">Conheça-nos</li>
                     <li class="lista_rodape-item"><a href="" class="lista_rodape-link">Sobre</a></li>
@@ -196,8 +201,9 @@
             </div>
             <div class="rodape_direitos">
                 <hr>
-                <p>© 2021-2024 Amazon.com, Inc. ou suas afiliadas</p>
+                <p>© 2021-2024 Coffee and Books, Inc. ou suas afiliadas</p>
             </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
