--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <link rel="stylesheet" href="style/carrosel.css">
     <script src="carrossel.js" defer></script>
+    <link rel="shortcut icon" href="imagens/livro.png" type="image/x-icon">
 </head>
 <body>
     <header class="cabecalho">
