--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
             <a href="#" class="container_link"><img src="imagens/Favoritos.png" alt="logo favorito" class="container_imagem favorito_transparente"></a>
             <a href="#" class="container_link"><img src="imagens/Compras.png" alt="logo carrinho de compras" class="container_imagem"> <p class="container_texto">Minha Sacola</p></a>
-            <a href="#" class="container_link"><img src="imagens/Usuário.png" alt="logo usuario" class="container_imagem"><p class="container_texto">Meu perfil</p></a>
+            <a href="perfil.html" class="container_link"><img src="imagens/Usuário.png" alt="logo usuario" class="container_imagem"><p class="container_texto">Meu perfil</p></a>
         </div>
     </header>
     <section class="baner">
@@ -67,19 +67,6 @@
         <div class="swiper">
             <div class="swiper-pagination"></div>
             <div class="swiper-wrapper" id="carrossel">
-              <!-- <div class="swiper-slide"><img src="imagens/codigodoheroi.jpg" alt="">
-                    <div id="preco_descricao">
-                        <h1 class="preco_titulo">titulo</h1>
-                        <p class="preco">preco</p>
-                    </div> 
-                </div>
-              <div class="swiper-slide"><img src="imagens/comofazeramigos.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/nadapodemeferri.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/nuncaehoradeparar.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/leidaatracao.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/pacientesilenciosa.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/poderhabito.jpg" alt=""></div>
-              <div class="swiper-slide"><img src="imagens/fbi.webp" alt=""></div> -->
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
