pagina de login finalizada

--- a/perfil.html
+++ b/perfil.html
@@ -11,8 +11,7 @@
     <section class="container">
         <div class="container_conteudo">
             <div>
-                <h1>Seja bem vindo</h1>
-                <p>Estamos felizes em vê-lo de volta conosco</p>
+                <h1 class="titulo_conteudo">Seja bem vindo</h1>
             </div>
             <div class="container_dados">
 
@@ -21,19 +20,19 @@
                     <input class="email" type="email" placeholder="E-mail">
                     <input class="senha" type="password" placeholder="Senha">
                     <input class="cpf" type="number"  placeholder="CPF">
-                    <input class="data" type="date">
+                    <input class="data" type="date" placeholder="Data de nascimento">
                     <button class="botao_continuar">Continuar</button>
                 </div>
 
             </div>
            
-            <div>
-                <p>Faça <strong>login</strong> com outra conta</p>
+            <div class="login">
+                <p class="paragrafo_conteudo">Estamos felizes em vê-lo de volta conosco</p>
             </div>
 
             <div class="container_botao">
-                <button>Google</button>
-                <button>Facebook</button>
+                <button class="botao_google"> <img src="imagens/google 1.png" alt="">Faça login com o Google</button>
+                <button class="botao_facebook"> <img src="imagens/facebook 1.png" alt="">Faça login com o Facebook</button>
             </div>
         </div>
         <div class="container_imagem">
