fazendo a validação do cpf

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <link rel="stylesheet" href="style/carrosel.css">
-    <script src="carrossel.js" defer></script>
+    <script src="js/carrossel.js" defer></script>
     <link rel="shortcut icon" href="imagens/livro.png" type="image/x-icon">
 </head>
 <body>
@@ -192,6 +192,6 @@
                 <p>© 2021-2024 Coffee and Books, Inc. ou suas afiliadas</p>
             </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
