--- a/camera.html
+++ b/camera.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/camera.css">
-    <link rel="shortcut icon" href="imagens/camera-dslr.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/camera-dslr.png"  type="image/x-icon">
 </head>
 <body>
     <section class="container">
@@ -15,14 +15,16 @@
             <img class="imagem_rosto" src="imagens/reconhecimento.png" alt="Rosto com olhos e um sorriso dentro de um enquadramento">
 
             <div class="formulario_camera">
-                <video class="reconhecimento_facial" width="320" height="240" autoplay></video>
+                <video class="reconhecimento_facial"  autoplay></video>
                 <button class="camera_botao">Tirar Foto</button>
             </div>
 
             <div class="formulario_mensagem">
-                <canvas width="320" height="240"> </canvas>
+                <canvas class="canvas" width="320" height="240"> </canvas>
                 <img src="imagens/ícone check.png" alt="Ícone de validação" class="formulario__imagem">
                 <p>Prontinho, imagem capturada!</p>
+
+                <a href="#" class="abrir_conta">Finalizar Cadastro</a>
             </div>
         </div>
     </section>
