correção de bugs

--- a/camera.html
+++ b/camera.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="formulario_mensagem">
-                <canvas class="canvas" width="320" height="240"> </canvas>
+                <canvas class="canvas"> </canvas>
                 <img src="imagens/ícone check.png" alt="Ícone de validação" class="formulario__imagem">
                 <p>Prontinho, imagem capturada!</p>
 
