--- a/index.html
+++ b/index.html
@@ -66,11 +66,8 @@
         <div class="carrossel_container">
         <div class="swiper">
             <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper" id="carrossel">
-            </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-          </div>
+            <div class="swiper-wrapper" id="carrossel"></div>
+        </div>
     <div class="card">
         <div class="card_descricao">
             <div class="descricao">
@@ -101,9 +98,7 @@
                   <div class="swiper-slide"><img src="imagens/nuncaehoradeparar.jpg" alt=""></div>
                   <div class="swiper-slide"><img src="imagens/fbi.webp" alt=""></div>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-              </div>
+            </div>
                 
                 <div class="card">
             <div class="card_descricao">
@@ -113,7 +108,7 @@
                     <h2 class="descricao_titulo_produto">Dale Carnegie</h2>
                     <p>escritor e orador norte-americano. Fundou o que é hoje uma rede mundial de mais de 3.000 instrutores e escritórios em aproximadamente 97 países que já formou mais de 9 milhões de pessoas no mundo.</p>
                 </div>
-                <img src="imagens/Dale Carnegie.jpg" alt="">
+                <img class="imagem_card" src="imagens/Dale Carnegie.jpg" alt="">
             </div>
             <div class="card_botoes">
                 <ul class="botoes">
